--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,8 @@ jobs:
   test-orchestrator:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
       
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -44,7 +45,8 @@ jobs:
       matrix:
         service: [dm, mam, cmm, retrieval]
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
       
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
@@ -74,7 +76,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test-orchestrator, test-python-services]
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -93,7 +96,8 @@ jobs:
   validate-openapi:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
       
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
@@ -115,7 +119,8 @@ jobs:
   # lint:
   #   runs-on: ubuntu-latest
   #   steps:
-  #     - uses: actions/checkout@v4
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
   #     
   #     - name: Set up Python 3.11
   #       uses: actions/setup-python@v4
